<resources>
    <string name="app_name">Inventaire LoL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Bonjour blank fragment</string>
    <string name="btnGoRegister">S\'inscrire</string>
    <string name="noAlreadyRegister">Pas encore inscris ?</string>
    <string name="login">Se connecter</string>
    <string name="Password">Mot de passe</string>
    <string name="pseudo">Nom d\'utilisateur</string>
    <string name="alreadyRegister">Déjà inscris ?</string>
    <string name="register">S\inscrire</string>
    <string name="chooseFile">Choisir un image de profil</string>
    <string name="email">Email</string>
    <string name="home">Accueil</string>
    <string name="inventory">Inventaire</string>
    <string name="profile">Profil</string>
    <string name="errorRegisterTitle">Echec de l\'enregistrement</string>
    <string name="emptyPassword">Votre mot de passe ne peut pas être vide !</string>
    <string name="emptyPseudo">Votre pseudo ne peut pas être vide !</string>
    <string name="emptyMail">Votre mail ne peut pas être vide !</string>
    <string name="alreadyUsedPseudoOrMail">Mail ou pseudo déjà utilisés !</string>
    <string name="understood">Compris !</string>
    <string name="errorMessage">Une erreur a eu lieu, réessayez !</string>
    <string name="errorLoginTitle">Echec de la connexion</string>
    <string name="wrongPasswordOrPseudo">Mauvais mot de passe ou pseudo !</string>
    <string name="connected">Connecté !</string>
    <string name="remember">S\'en souvenir</string>
    <string-array name="region">
        <item>BR1</item>
        <item>EUN1</item>
        <item>EUW1</item>
        <item>JP1</item>
        <item>KR</item>
        <item>LA1</item>
        <item>LA2</item>
        <item>NA1</item>
        <item>OC1</item>
        <item>PH2</item>
        <item>RU</item>
        <item>SG2</item>
        <item>TH2</item>
        <item>TR1</item>
        <item>TW2</item>
        <item>VN2</item>
    </string-array>
    <string name="selectRegion">Choisir votre région</string>
    <string name="invited">Continuer en tant qu\'invité</string>
    <string name="usernameRiot">Votre pseudo Riot</string>

    <string name="noConnected">Vous n\'êtes pas connecté</string>
    <string name="lang">fr_FR</string>
    <string name="loading">Chargement ...</string>
    <string name="waitingForServer">En attente du serveur ...</string>
    <string name="riotAccountDoesntExist">Pas de compte Riot trouvé,\nVérifiez le nom du compte et la région</string>
    <string name="riotAccountEmpty">Vous n\'avez pas renseigné de compte Riot </string>
    <string name="riotAccountAlreadyLinked">Ce compte est déjà associé à un autre utilisateur </string>
    <string name="logOut">Se déconnecter</string>
    <string name="acceptLocation">Vous devez autoriser la localisation</string>
    <string name="localisation">Afficher votre ville</string>
    <string name="champions">Champions :</string>
    <string name="items">Items :</string>
    <string name="apiKey">Clé API</string>
    <string name="cancel">Annuler</string>
    <string name="close">Fermer</string>
    <string name="cannotReachAPI">Impossible de joindre l\'API</string>
    <string name="checkAPIKey">Vérifiez la clé API</string>





</resources>